--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="horizontal_line">#EBE2D8</color>
 
     <!-- misc colors -->
-    <color name="light_grey">#EFEBE7</color>
+    <color name="light_grey">#80ECE9E7</color>
 </resources>
