converted settings into interactive buttons

--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -222,7 +222,19 @@
         </RadioGroup>
 
 
+
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/save_preferences_btn"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save_preferences_btn" />
 
 
 </LinearLayout>
