--- a/app/src/main/res/layout/fragment_user_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_user_profile_tab.xml
@@ -34,86 +34,61 @@
         />
 
 
-    <LinearLayout
+
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/round_corner"
-        android:padding="20dp">
+        android:backgroundTint="@color/background_text"
+        android:drawableEnd="@drawable/edit_profile"
+        android:fontFamily="@font/karla"
+        android:padding="20dp"
+        android:text="@string/edit_profile"
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:cornerRadius="10dp"
+        android:stateListAnimator="@null"
+        />
 
-        <TextView
-            android:id="@+id/edit_profile"
-            android:layout_width="266dp"
-            android:layout_height="wrap_content"
-            android:text="@string/edit_profile"
-          />
-
-        <ImageButton
-            android:id="@+id/edit_profile_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="21dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background_text"
-            android:src="@drawable/edit_profile" />
-
-    </LinearLayout>
-
-    <LinearLayout
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/round_corner"
-        android:padding="20dp">
+        android:backgroundTint="@color/background_text"
+        android:drawableEnd="@drawable/preferences"
+        android:fontFamily="@font/karla"
+        android:padding="20dp"
+        android:text="@string/preferences"
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:cornerRadius="10dp"
+        android:stateListAnimator="@null"/>
 
-        <TextView
-            android:id="@+id/preferences"
-            android:layout_width="268dp"
-            android:layout_height="wrap_content"
-            android:text="@string/preferences" />
-
-        <ImageButton
-            android:id="@+id/preferences_btn"
-            android:layout_width="62dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background_text"
-            android:src="@drawable/preferences" />
-    </LinearLayout>
-
-    <LinearLayout
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/round_corner"
-        android:padding="20dp">
-
-        <TextView
-            android:id="@+id/settings"
-            android:layout_width="270dp"
-            android:layout_height="wrap_content"
-
-            android:text="@string/settings" />
-
-        <ImageButton
-            android:id="@+id/settings_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="21dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background_text"
-            android:src="@drawable/setting" />
-    </LinearLayout>
-
+        android:backgroundTint="@color/background_text"
+        android:drawableEnd="@drawable/setting"
+        android:fontFamily="@font/karla"
+        android:padding="20dp"
+        android:text="@string/settings"
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:cornerRadius="10dp"
+        android:stateListAnimator="@null"/>
 
 </LinearLayout>
