--- a/app/src/main/res/layout/fragment_user_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_user_profile_tab.xml
@@ -34,8 +34,8 @@
         />
 
 
-
     <Button
+        android:id="@+id/edit_profile_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -56,6 +56,7 @@
         />
 
     <Button
+        android:id="@+id/preferences_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -74,6 +75,7 @@
         android:stateListAnimator="@null"/>
 
     <Button
+        android:id="@+id/setting_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
