--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".PreferencesFragment"
     >
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PreferencesFragment"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/app_background"
     android:layout_marginBottom="20dp"
