--- a/app/src/main/res/layout/fragment_pending_group.xml
+++ b/app/src/main/res/layout/fragment_pending_group.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PendingGroupFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pendingGroupRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pending Gorup" />
+        android:layout_height="match_parent"/>
+<!--    <include-->
+<!--        layout="@layout/vote_group_card"-->
+<!--        android:layout_height="250dp"-->
+<!--        android:layout_width="160dp"/>-->
+<!--    <include-->
+<!--        layout="@layout/vote_group_card"-->
+<!--        android:layout_height="250dp"-->
+<!--        android:layout_width="160dp"-->
+<!--        />-->
 
-</FrameLayout>
+</RelativeLayout>
