--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
     <color name="dark_brown">#312B28</color>
     <color name="off_white">#FAF4EC</color>
+    <color name="opaque">#FFFDFB</color>
     <color name="creme">#EBD7B9</color>
     <color name="gray">#B3ADAD</color>
 
