--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -99,24 +99,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_username_tv" />
 
-    <Button
-        android:id="@+id/fragment_login_forgot_username_btn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="@string/forgot_username_button_text"
-        android:textAllCaps="false"
-        android:textColor="@color/purple_500"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_login_username_et" />
-
     <TextView
         android:id="@+id/fragment_login_password_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/password_text"
@@ -124,7 +112,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_login_forgot_username_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_login_username_et" />
 
     <EditText
         android:id="@+id/fragment_login_password_et"
