--- a/app/src/main/res/layout/fragment_account_setting.xml
+++ b/app/src/main/res/layout/fragment_account_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
-    tools:context=".AccountSettingFragment">
+    tools:context=".UserProfileTab.AccountSettingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
