--- a/app/src/main/res/layout/my_group_list.xml
+++ b/app/src/main/res/layout/my_group_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/app_background"
@@ -25,9 +26,21 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="20dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/one_direction_photo"
-                app:civ_border_color="#FF000000" />
+                app:civ_border_color="#FF000000"
+                android:focusable="true" />
+<!--            <ImageButton-->
+<!--                android:id="@+id/group_profile"-->
+<!--                android:layout_width="60dp"-->
+<!--                android:layout_height="60dp"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:layout_marginBottom="20dp"-->
+<!--                android:layout_weight="0"-->
+<!--                android:background="@drawable/circular_shape"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                tools:layout_editor_absoluteX="176dp" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
