--- a/app/src/main/res/layout/fragment_user_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_user_profile_tab.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/one_direction_photo"
+        android:src="@drawable/placeholder"
         />
 
 
