--- a/app/src/main/res/layout/match_group_card.xml
+++ b/app/src/main/res/layout/match_group_card.xml
@@ -1,145 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- scroll view layout for each group card
 used to populate the cardStackView recycler -->
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:background="@color/app_background">
-    <LinearLayout
+    android:layout_height="match_parent">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <!-- linear layout holds the undo and more button -->
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        android:background="@color/app_background">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="end">
-            <ImageButton
-                android:id="@+id/undo_btn"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/undo"
-                android:layout_marginEnd="8dp"
-                android:fillColor="@color/black"
-                android:contentDescription="@string/undo_button"/>
-            <ImageButton
-                android:id="@+id/match_more_btn"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/more_horiz"
-                android:fillColor="@color/black"
-                android:contentDescription="@string/match_group_card_more_button"/>
-        </LinearLayout>
-        <!-- card view that holds the card -->
-        <androidx.cardview.widget.CardView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="60dp"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="13dp"
-            app:cardBackgroundColor="@color/app_background">
-            <!-- card will use a base linear layout for a vertical displaying of content -->
+            android:orientation="vertical">
+            <!-- linear layout holds the undo and more button -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <!-- relative layout holds the group name and biscuits -->
-                <RelativeLayout
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="end">
+                <ImageButton
+                    android:id="@+id/undo_btn"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/undo"
+                    android:layout_marginEnd="8dp"
+                    android:fillColor="@color/black"
+                    android:contentDescription="@string/undo_button"/>
+                <ImageButton
+                    android:id="@+id/match_more_btn"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/more_horiz"
+                    android:fillColor="@color/black"
+                    android:contentDescription="@string/match_group_card_more_button"/>
+            </LinearLayout>
+            <!-- card view that holds the card -->
+            <androidx.cardview.widget.CardView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="60dp"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="13dp"
+                app:cardBackgroundColor="@color/app_background">
+                <!-- card will use a base linear layout for a vertical displaying of content -->
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="15dp"
-                    android:paddingHorizontal="20dp">
-                    <TextView
-                        android:id="@+id/group_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:theme="@style/page_title"
-                        android:layout_centerVertical="true"/>
-                    <TextView
-                        android:id="@+id/biscuit_value"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:textColor="@color/black"
-                        android:layout_toStartOf="@id/biscuit_icon"
-                        android:layout_centerInParent="true"/>
-                    <ImageView
-                        android:id="@+id/biscuit_icon"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:contentDescription="@string/biscuit_icon"
-                        android:src="@drawable/biscuits_icon"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerInParent="true"/>
-                </RelativeLayout>
-                <!-- group photo -->
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/one_direction_photo"
-                    android:contentDescription="matching group card photo"/>
-                <!-- a nested card view for the interest tags -->
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/app_background"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="15dp">
-                    <LinearLayout
+                    android:orientation="vertical">
+                    <!-- relative layout holds the group name and biscuits -->
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <!-- use flex box layout to align the dynamic interest tags -->
-                        <com.google.android.flexbox.FlexboxLayout
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/interest_tags"
+                        android:paddingVertical="15dp"
+                        android:paddingHorizontal="20dp">
+                        <TextView
+                            android:id="@+id/group_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:theme="@style/page_title"
+                            android:layout_centerVertical="true"/>
+                        <TextView
+                            android:id="@+id/biscuit_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:textColor="@color/black"
+                            android:layout_toStartOf="@id/biscuit_icon"
+                            android:layout_centerInParent="true"/>
+                        <ImageView
+                            android:id="@+id/biscuit_icon"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:contentDescription="@string/biscuit_icon"
+                            android:src="@drawable/biscuits_icon"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"/>
+                    </RelativeLayout>
+                    <!-- group photo -->
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/one_direction_photo"
+                        android:contentDescription="matching group card photo"/>
+                    <!-- a nested card view for the interest tags -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        app:cardBackgroundColor="@color/app_background"
+                        app:cardCornerRadius="4dp"
+                        app:cardElevation="15dp">
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="15dp"
-                            app:flexWrap="wrap"
-                            app:justifyContent="center">
-                        </com.google.android.flexbox.FlexboxLayout>
-                        <!-- a nested card view for the about us description -->
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:cardBackgroundColor="@color/app_background"
-                            app:cardCornerRadius="4dp"
-                            app:cardElevation="15dp">
-                            <LinearLayout
+                            android:orientation="vertical">
+                            <!-- use flex box layout to align the dynamic interest tags -->
+                            <com.google.android.flexbox.FlexboxLayout
+                                xmlns:app="http://schemas.android.com/apk/res-auto"
+                                android:id="@+id/interest_tags"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:paddingHorizontal="15dp"
-                                android:paddingVertical="20dp">
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:text="@string/about_us"
-                                    android:textSize="22sp"
-                                    android:textStyle="bold"/>
-                                <TextView
-                                    android:id="@+id/about_us_description"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:paddingTop="20dp"/>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-</ScrollView>
+                                android:padding="15dp"
+                                app:flexWrap="wrap"
+                                app:justifyContent="center">
+                            </com.google.android.flexbox.FlexboxLayout>
+                            <!-- a nested card view for the about us description -->
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                app:cardBackgroundColor="@color/app_background"
+                                app:cardCornerRadius="4dp"
+                                app:cardElevation="15dp">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:paddingHorizontal="15dp"
+                                    android:paddingVertical="20dp">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:text="@string/about_us"
+                                        android:textSize="22sp"
+                                        android:textStyle="bold"
+                                        android:paddingBottom="120dp"/>
+                                    <TextView
+                                        android:id="@+id/about_us_description"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:paddingTop="20dp"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
+    <!-- container for the accept and reject button -->
+    <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="30dp"
+    android:layout_alignParentBottom="true">
+
+    <ImageButton
+        android:id="@+id/reject_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="@string/reject_button"
+        android:src="@drawable/reject_btn" />
+
+    <ImageButton
+        android:id="@+id/accept_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:background="@null"
+        android:contentDescription="@string/accept_button"
+        android:src="@drawable/accept_btn" />
+    </RelativeLayout>
+</RelativeLayout>
