--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -246,11 +246,13 @@
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
-           tools:text = "display Name"/>
+           tools:text = "Personal Bio"/>
 
        <Button
+           android:id="@+id/btn_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
+           android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
